--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -50,7 +50,7 @@
                                 <path d="M18,8h-1V6c0-2.76-2.24-5-5-5S7,3.24,7,6v2H6c-1.1,0-2,0.9-2,2v10c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2V10C20,8.9,19.1,8,18,8z M12,17c-1.1,0-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2S13.1,17,12,17z M15.1,8H8.9V6c0-1.71,1.39-3.1,3.1-3.1s3.1,1.39,3.1,3.1V8z"/>
                             </svg>
                             <input type="password" id="password" name="password" placeholder="Мінімум 8 символів" required>
-                            <button type="button" class="password-toggle" onclick="togglePassword('password')">
+                            <button type="button" class="password-toggle" aria-label="Показати пароль">
                                 <svg class="eye-open" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
                                 </svg>
@@ -74,7 +74,7 @@
                                 <path d="M12 1L3 5V11C3 16.55 6.84 21.74 12 23C17.16 21.74 21 16.55 21 11V5L12 1M10 17L6 13L7.41 11.59L10 14.17L16.59 7.58L18 9L10 17Z"/>
                             </svg>
                             <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Повторіть пароль" required>
-                            <button type="button" class="password-toggle" onclick="togglePassword('confirmPassword')">
+                            <button type="button" class="password-toggle" aria-label="Показати пароль">
                                 <svg class="eye-open" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
                                 </svg>
@@ -96,7 +96,6 @@
                         </label>
                     </div>
 
-
                     <button type="submit" class="btn-primary-full">
                         <span class="btn-text">Створити акаунт</span>
                         <div class="btn-loader" style="display: none;">
@@ -106,7 +105,6 @@
 
                     <div class="divider">
                         <span>або зареєструватися з</span>
-                    </div>
                     </div>
                 </form>
 
