--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,8 +24,8 @@
             </div>
             
             <ul class="nav-menu">
-                <li><a href="#features" class="nav-link">Можливості</a></li>
-                <li><a href="#how-it-works" class="nav-link">Як працює</a></li>
+                <li><a href="/features" class="nav-link">Можливості</a></li>
+                <li><a href="/how-it-works" class="nav-link">Як працює</a></li>
                 <li><a href="/contacts" class="nav-link">Контакти</a></li>
             </ul>
 
@@ -47,7 +47,7 @@
                             </svg>
                         </button>
                         <div class="dropdown-menu">
-                            <a href="/profile" class="dropdown-item">
+                            <a href="/user/{{user.email}}" class="dropdown-item">
                                 <svg viewBox="0 0 20 20" fill="currentColor">
                                     <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
                                 </svg>
@@ -103,8 +103,8 @@
                 <div class="footer-links">
                     <nav class="footer-column">
                         <h4>Продукт</h4>
-                        <a href="#features">Можливості</a>
-                        <a href="#how-it-works">Як працює</a>
+                        <a href="/features">Можливості</a>
+                        <a href="/how-it-works">Як працює</a>
                     </nav>
                     
                     <nav class="footer-column">
