--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -125,7 +125,7 @@
                 <p>&copy; 2024 Prompty. Всі права захищені.</p>
                 <nav class="footer-legal">
                     <a href="/rules/of_use">Умови використання</a>
-                    <a href="/rules//privacy">Політика конфіденційності</a>
+                    <a href="/rules/privacy">Політика конфіденційності</a>
                 </nav>
             </div>
         </div>
